working with pagodabox db in theory

--- a/app/webroot/css/pathcomics.css
+++ b/app/webroot/css/pathcomics.css
@@ -45,4 +45,6 @@ form.NewWorldForm label { width: 168px; }
 form.NewWorldForm input { width: 198px; }
 
 form.NewComicForm label { width: 175px; } 
-form.NewComicForm input { width: 190px; } 
+form.NewComicForm input { width: 190px; }
+
+.DialogNoTitle .ui-dialog-titlebar { display: none; }
